Add PiHole admin secret

--- a/cluster/apps/networking/pihole/helm-release.yaml
+++ b/cluster/apps/networking/pihole/helm-release.yaml
@@ -39,3 +39,6 @@ spec:
     persistentVolumeClaim:
       enabled: true
       existingClaim: pihole-config
+    admin:
+      existingSecret: "pihole-admin-secret"
+      passwordKey: "pihole-admin-secret"
