Try to fix PiHole admin secret

--- a/cluster/apps/networking/pihole/secret.sops.yaml
+++ b/cluster/apps/networking/pihole/secret.sops.yaml
@@ -1,6 +1,7 @@
+# yamllint disable
 apiVersion: v1
 data:
-    pihole-admin-secret: ENC[AES256_GCM,data:dAFHIOd0cobrq6EyUQ==,iv:RWxxUo+Zng3qtcdzcdECfsXzXcfMadL2w+6yshAABOk=,tag:4J5zFA25oYD8Vb91tCbPCw==,type:str]
+    pihole-admin-secret: ENC[AES256_GCM,data:EZDG8uDcHt4z2LotEA==,iv:vMj65YhvBOAH8NWkyZyTAniNB1q5TF4EgBoosLGTUdg=,tag:7ZIzmqgM4Bwcl8xu1aawlg==,type:str]
 kind: Secret
 metadata:
     name: pihole-admin-secret
@@ -15,14 +16,14 @@ sops:
         - recipient: age1fl92uj8fwujcphes4cxm82qlztxf4kh6j0d2a9at7alpml266p3sedrvx3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAydTIwM25VK3drSWFjdDN6
-            WnpIVHRQdFNMVmVEMkR2djdOOUtYTHRobUNFCjAxOHVZdnJtNmphVDhuTVVMM0pM
-            U0VJNWkxWDJJT3hJSVFhZUhRV0ZBdk0KLS0tIEVTSW5IdG82ZEhNdUVoM2pGUVNx
-            SnFiWmkvWkg0ZFJFRHpOZURMN25UV00KPugQ5I+6BcHn7Vt92BEfqoDdvDGIGcJA
-            ViRgL78bH3Z2Ki1jaceZYo67lDYWbuzn9I4l5BbVGDql6V9GmG4Aeg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQbGFCN3lpNHFrOU5WQmlI
+            djNUVjNIWGxHa3d2WllZM01ta0pXVGVyNFFVCmFHWTlBZmFiWGNsS0ZjdWV2NTF6
+            M3VrL1RaSnlOZnN5Qlo1OE9nSmVNT0kKLS0tIGhsSVNZRnRUcktCcmVlN1NYS1p6
+            VW9XcWdMaitGU2xOU2VIRXRpYVpYZ3MKm0pf0b7IpVeoMWWAyrZ0sNUvdsQysjLa
+            Gf6ZG88Y+aEBZx4vXP2bGkYPu/7267s1MQrjQs+VqNs8KZoNjPywOQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-12T22:21:22Z"
-    mac: ENC[AES256_GCM,data:kzHu8ZcRCkliNWag35ZcbO1vCpaOCriOAm4QNa4Y0rEw1S+tcf0Dm3dPzV1sZynEJpTCqhN3hSe952F52SESylREnR1OYL722Go/vwzEhvSUqk4Lxgn/Znk7XnpaIl9/qHeU/CMwhATnhbhiep9VvPrwk0GoH4GK9YCZzdd26l0=,iv:QxnCZT+Djrt+lVGSGRBZ7Lx6JsykvcNN3w3Eq3oRY+M=,tag:c8mxiLox7l5a3GRT3Dn39A==,type:str]
+    lastmodified: "2022-03-12T22:35:01Z"
+    mac: ENC[AES256_GCM,data:4doVDkdUxlWRPNWtiUsjCyiF4cCTCyrLC/vF6zlnfS/SPNjMpKc4/AfPRJC62bZ6AgdNYignHhoFHUri9qg2TFX1eJf3e+tXDlPQDfMzZIlOaivlGt5CaqOqoF2sYUesJQHrrDVTFIxNM+uZQzzi4ZFmAhWnGkHPOBjB7X1fqk8=,iv:NRNeP1IYh0x/qyhbiHFCKAVEf9RNO3lFq1X56ON2wzQ=,tag:bayA8QAnHm3lL83iBfZULw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
