Change PiHole admin secret to stringData

--- a/cluster/apps/networking/pihole/secret.sops.yaml
+++ b/cluster/apps/networking/pihole/secret.sops.yaml
@@ -1,7 +1,7 @@
 # yamllint disable
 apiVersion: v1
-data:
-    pihole-admin-secret: ENC[AES256_GCM,data:EZDG8uDcHt4z2LotEA==,iv:vMj65YhvBOAH8NWkyZyTAniNB1q5TF4EgBoosLGTUdg=,tag:7ZIzmqgM4Bwcl8xu1aawlg==,type:str]
+stringData:
+    pihole-admin-secret: ENC[AES256_GCM,data:C4Jl8drhmhvnR0eRGA==,iv:Mb8bj4rRD/RmAEKfTvpixL2unXohQZFCt4ad/ksgQ+Q=,tag:6r9lMk8UA2Wui/RNJ6o5iQ==,type:str]
 kind: Secret
 metadata:
     name: pihole-admin-secret
@@ -16,14 +16,14 @@ sops:
         - recipient: age1fl92uj8fwujcphes4cxm82qlztxf4kh6j0d2a9at7alpml266p3sedrvx3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQbGFCN3lpNHFrOU5WQmlI
-            djNUVjNIWGxHa3d2WllZM01ta0pXVGVyNFFVCmFHWTlBZmFiWGNsS0ZjdWV2NTF6
-            M3VrL1RaSnlOZnN5Qlo1OE9nSmVNT0kKLS0tIGhsSVNZRnRUcktCcmVlN1NYS1p6
-            VW9XcWdMaitGU2xOU2VIRXRpYVpYZ3MKm0pf0b7IpVeoMWWAyrZ0sNUvdsQysjLa
-            Gf6ZG88Y+aEBZx4vXP2bGkYPu/7267s1MQrjQs+VqNs8KZoNjPywOQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIMS9ZZ3RCM3diOGpFZm5u
+            QjZUUGpEZ1N5dVp1UWdpamhqalJQQ2xCVER3Clh4dkR6YWxsY0s2TitESDhQdlIx
+            NWZDKzN2UW5nK21xdjZseGRxQnhIeU0KLS0tIExwdmpYRzQxVTRmbmgrTWNtUXJZ
+            dVBwNEcvNCtuc080a1NEVENRRzhYdDAKGwWXFCSKzq5gY3gyual6qCKMUs8lOxoo
+            WgYIdt11JgZaQjFusUE3fxShq53FQ3g7XtnsUvYioF6oDu2YGbdRRQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-12T22:35:01Z"
-    mac: ENC[AES256_GCM,data:4doVDkdUxlWRPNWtiUsjCyiF4cCTCyrLC/vF6zlnfS/SPNjMpKc4/AfPRJC62bZ6AgdNYignHhoFHUri9qg2TFX1eJf3e+tXDlPQDfMzZIlOaivlGt5CaqOqoF2sYUesJQHrrDVTFIxNM+uZQzzi4ZFmAhWnGkHPOBjB7X1fqk8=,iv:NRNeP1IYh0x/qyhbiHFCKAVEf9RNO3lFq1X56ON2wzQ=,tag:bayA8QAnHm3lL83iBfZULw==,type:str]
+    lastmodified: "2022-03-12T22:43:59Z"
+    mac: ENC[AES256_GCM,data:7s2gjFRRpmv7b12DsW5CFVFfTwGSBIxy8NxilINFlpij9zLatsmilWx3tzKEjjssTHah1jAyF7cxsnc2dsaND76NBai6ziTX86TqNAN48WIylWvQ2BekGn9Tw3BzSyqkH+3/AWCC6kbbwIg2ZPGK+ln0ZTtaVSdyVZbEnqL17sY=,iv:ZGL63yQwrk4Cbx1Qi6zZRstSVotWjRdxTq/0NHLEddc=,tag:Ag6xLjibrHh1teiO829dbw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
