--- a/cluster/apps/networking/pihole/helm-release.yaml
+++ b/cluster/apps/networking/pihole/helm-release.yaml
@@ -36,6 +36,10 @@ spec:
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
       type: LoadBalancer
+    dnsmasq:
+      # these won't actually show up in the PiHole gui, but they should be added to the dnsmasq config
+      customDnsEntries:
+        - address=/traefik.neilfrench.me/192.168.0.50
     persistentVolumeClaim:
       enabled: true
       existingClaim: pihole-config
