--- a/cluster/apps/networking/pihole/ingress.yaml
+++ b/cluster/apps/networking/pihole/ingress.yaml
@@ -10,6 +10,7 @@ metadata:
     hajimari.io/enable: "pihole"
     hajimari.io/icon: "dns"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.priority: "2"
 spec:
   ingressClassName: "traefik"
   tls:
@@ -20,7 +21,7 @@ spec:
     - host: "pihole.${SECRET_DOMAIN}"
       http:
         paths:
-          - path: /
+          - path: /admin/
             pathType: Prefix
             backend:
               service:
