--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -112,6 +112,7 @@ spec:
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4"
         hosts:
           - host: "hajimari.${SECRET_DOMAIN}"
             paths:
