--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -112,9 +112,9 @@ spec:
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           external-dns/is-public: "true"
-          external-dns.alpha.kubernetes.io/target: "ipv4"
-          external-dns.alpha.kubernetes.io/ingress-hostname-source: "annotation-only"
-          external-dns.alpha.kubernetes.io/hostname: "hajimari"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          # external-dns.alpha.kubernetes.io/ingress-hostname-source: "annotation-only"
+          # external-dns.alpha.kubernetes.io/hostname: "hajimari"
         hosts:
           - host: "hajimari.${SECRET_DOMAIN}"
             paths:
