Change externalTrafficPolicy for HASS

--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
         type: LoadBalancer
         # externalIPs:
         #   - "${SVC_HOME_ASSISTANT_ADDR}"
-        # externalTrafficPolicy: Local
+        externalTrafficPolicy: Local
     ingress:
       main:
         enabled: true
