Initial migration of Vaultwarden

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,14 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:cJ8Vh+6lBSIhAZT+kQ==,iv:Usms+3bzxm7MiCUOjSkPX5NXyM+SDh1aVI4ZVfJKBCo=,tag:ok/t892JveKwpjhQeN8xKA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:hV7XJpGsMgMYOzvxLML9kjexHAMPew==,iv:WD9Ex8DtVmbPISGV/T3TJcrrKKbjbEyLrsvI7DXU8q4=,tag:AUHuSPxQwyXpgdLGGA+htQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:y8ZLTn9R5fFoLL5Vkw==,iv:SyIvbRU/MsMz+IYhYRPS0WhIi8xKwMg0+98PkKChVIk=,tag:LDK0v4WvhD3WmtrNE9lBxg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:aXyZt63TWeqr84a2fTOKN4vkv46z7A==,iv:E2jXce17iEtftJKX3X3urilpEcP9ghUsKo4RaahDeqg=,tag:uHmvyeEAJSgXnZNw7Rd8DA==,type:str]
+    SECRET_VAULTWARDEN_ADMIN_TOKEN: ENC[AES256_GCM,data:QeiRx9b8jk177ukK24yKg1r8j0LzElm0MxW7ZsZJOUn9Z9cjosUqyZfcmeA1hJp91UeMnxXRhCcQx0oreq/FoQ==,iv:jNCI/WHOCcBuCb9PGqhdQY1jZOQQKlG4u7CrQ0r0UUo=,tag:FWckdXFvDiYPns+9cpw+KQ==,type:str]
+    SECRET_VAULTWARDEN_EMAIL_HOST: ENC[AES256_GCM,data:f3mGtArKMzF3sO1VAhM=,iv:p+FPVZklzv9kd06m9mFZITaVmQrX/qbwQoICZb/YQ5Y=,tag:nRgdRmCaNwnbfMNlavZLdg==,type:str]
+    SECRET_VAULTWARDEN_EMAIL_ADDR: ENC[AES256_GCM,data:Kz7Ir8bvPtCMUMJWPW5iKM0C+H8=,iv:96a1P0nq5RbHPpz6qQHgGUrybiEOo60YMFWhRz6Mj+U=,tag:+TQQri+TCwZ72A03niiYOA==,type:str]
+    SECRET_VAULTWARDEN_EMAIL_FROM: ENC[AES256_GCM,data:0pvb9gf00e4M8Bb1sAXQr/tXAfA=,iv:zjAEMlysUs44gDh0+PCJAgb7jHYVrXW2ftOY77K8UcA=,tag:oIURFUeXtCMNDXnVgv6p/A==,type:str]
+    SECRET_VAULTWARDEN_EMAIL_USER: ENC[AES256_GCM,data:CjoVUiXjfMXgyrHwW2lrdDA6/nYOgw==,iv:folV1KREYS6+Xk9l++0eqoUAvIiMrUf1U2dDMvtsJBA=,tag:Nt4GY005UJBSjDp1KC/VHg==,type:str]
+    SECRET_VAULTWARDEN_EMAIL_KEY: ENC[AES256_GCM,data:hxBNnltG2FCeqgYmGmfn7A==,iv:v6jCq02/lfL2Kaw1d6++0SiQJf5W7pu2BLSyFUFPm3o=,tag:N9pemuWv7figyd8T8ppAJQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +22,14 @@ sops:
         - recipient: age1fl92uj8fwujcphes4cxm82qlztxf4kh6j0d2a9at7alpml266p3sedrvx3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNQ1pEdk1CV2ZYRXFOQTg4
-            bENSRC9OUnRTSGY1aFVHN3l1c2ZTbE8wZVc4CmpSV2FQUFlLZ1hxaUxrbFltR2pK
-            WkRpY0J5MnNMNlRlSFdwSHBneVFoVnMKLS0tIG9YaHNHbUcySnNpdlgyYTlUcHdj
-            WlFLd0hKVm9NRDFZa1J6a2xXTFowUWsKeKXX1WmUedbARc9h9yyHiwdA1kLmk35v
-            wAJumNgqxKHyFyBn+94ndjpJbNVSN5dB2CoYPgPJjJTlJ8Fda9b4Jw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqUGxYa3VheU9lSk0zQ0tj
+            MEF3V2F0ajNhc2owL3UxZzZkZTZXQUh5VHo0Ck5MaTRwY3doSGN1NWE1bFdkaS9E
+            VTVFeWwvV3R3R0NXZVRNTDdTWS9CK0kKLS0tIEhsSDRxRXZpNXFDR0pSODNteWdm
+            dXRObTZoaEUwVUNmZUpycDd4L2tQNWsK5k43eBQris47dTWCsDjdkpR0V9mKE3vD
+            lgU0WW2eEZmtKPgBvveLWJU0ftkMdtP2J8Hmj3W3EAxvG2yG2+NGFQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-09T17:47:23Z"
-    mac: ENC[AES256_GCM,data:t1DS2dX2OZqhxi+ht7VGZQtnqapmwTLRA5biAZwci2W0e1h1Dk/CgYXAinn+DSWnnnSUMZVg1buk2qXiL5gPRolLraN4S8FrL88jorNKFJiBwG0jaAXwVD4hSANeVpOiNz3T9wdhF996bCkrg5Pe9B443AU+ZxRFdGt/VHkxyt0=,iv:4qouLpdG5xE06EsvvBvVVgst2FXQsGBDGlLK3fyHAzY=,tag:eUb5on1Dn238MVNnyQ/tKw==,type:str]
+    lastmodified: "2022-04-04T17:16:29Z"
+    mac: ENC[AES256_GCM,data:eeLIAeu3ilhm3aSvxLeuYQ7NpF9WR0i4I8ldYBhw9ScanqLumEtjOTp1pvkyr0YYhIY3xrXxVD9koG4CbZHjVoFUU25FKfrhDEfVeJ+TVN/kOuqZtGBIa+Qrds6pqnHwQien/ADdDtZXrv1NNU0YFicytrTmgMSrR/ybo3xTfkc=,iv:HTnTj/mbtdmsaH1weGiz3FqFW2l7Q0QZLQMebqJKfVY=,tag:jha/pVd37/GPE0np3rgIow==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
