--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -52,19 +52,19 @@ spec:
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
           - host: "vault.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  port: http
-              - path: /notifications/hub/negotiate
-                pathType: Prefix
-                service:
-                  port: http
-              - path: /notifications/hub
-                pathType: Prefix
-                service:
-                  port: websocket
+            # paths:
+            #   - path: /
+            #     pathType: Prefix
+            #     service:
+            #       port: http
+            #   - path: /notifications/hub/negotiate
+            #     pathType: Prefix
+            #     service:
+            #       port: http
+            #   - path: /notifications/hub
+            #     pathType: Prefix
+            #     service:
+            #       port: websocket
         tls:
           - hosts:
               - "vault.${SECRET_DOMAIN}"
