--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -55,16 +55,12 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-                service:
-                  port: http
-              - path: /notifications/hub/negotiate
-                pathType: Prefix
-                service:
-                  port: http
               - path: /notifications/hub
                 pathType: Prefix
                 service:
-                  port: websocket
+                  port: 3012
+              - path: /notifications/hub/negotiate
+                pathType: Prefix
         tls:
           - hosts:
               - "vault.${SECRET_DOMAIN}"
